# ice3

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  ezstream.xml  playlist.sh  requirements.txt  restart.py  s3playlist.py  update-config.sh
icecast/: Dockerfile  start.sh
icecast/etc-icecast2/: icecast.xml
icecast/icecast2-etc/: icecast.xml
sample/: streambot.env
streambot/: Dockerfile  ezstream.xml  playlist.sh  pyproject.toml  requirements.txt  s3playlist.py  update-config.sh
